--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,12 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password:
+
+server:
+  ssl:
+    key-store-password: U832zeBY
+    key-store-type: PKCS12
+    key-store: classpath:keystore/local.p12
+    key-alias: local
+    enabled: true
+  port: 8443
